# PAMSI

1_projekt/driver/: priority_queue.cpp
1_projekt/inc/: obsluga_plikow.hh
1_projekt/sprawozdanie/: sprawko.fdb_latexmk  sprawko.fls  str_tytulowa.tex
1_projekt/src/: main.cpp
2_projekt/: merge_sort.cpp  plik_z_danymi_tylko_rating.txt
2_projekt/1_przeszukiwanie/: a.out  driver.cpp  files.cpp  files.hh  test3.csv
2_projekt/program/: CMakeLists.txt
2_projekt/sprawozdanie/: .~lock.Złożoność.ods#  Złożoność.ods  analiza_zlozonosci.tex  empty.txt  erase.txt  implementacja_algorytmow.tex  intro_przefiltrowane_dane_100tys.txt  intro_przefiltrowane_dane_10tys.txt  intro_przefiltrowane_dane_500tys.txt  intro_przefiltrowane_dane_max.txt  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  opis_badanych_algorytmow.tex  przefiltrowane_dane_100tys.txt  przefiltrowane_dane_10tys.txt  przefiltrowane_dane_500tys.txt  przefiltrowane_dane_max.txt  quick_przefiltrowane_dane_100tys.txt  quick_przefiltrowane_dane_10tys.txt  quick_przefiltrowane_dane_500tys.txt  quick_przefiltrowane_dane_max.txt  srednia_mediana.tex  str_tytulowa.tex  zad1.txt  zadanie1.tex
3_projekt/program/: CMakeLists.txt
3_projekt/program/inc/: board.hh  circle.hh  cross.hh
3_projekt/program/src/: board.cpp  circle.cpp  cross.cpp  main.cpp
3_projekt/sprawozdanie/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  str_tytulowa.tex
projekt1/: CMakeLists.txt  list.txt  obsluga_plikow.cpp  obsluga_plikow.hh  priority_queue.cpp  priority_queue.hh
projekt1/driver/: a.out  (+2 more)
(+23 files in other folders)
